--- a/marketing.css
+++ b/marketing.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    24/05/2024
+Last change:    28/06/2024
 Author:    creativemaze
 Primary use:    Marketing
 -------------------------------------------------------------------*/
@@ -592,24 +592,23 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin-left: 100px;
 }
 
-.prev_slide,
-.next_slide{
-	font-size: 50px;
-	font-weight: 700;
+.prev_slide .fi,
+.next_slide .fi{
+	font-size: 38px;
 	transition: 0.6s ease;
-	width: auto;
+	max-width: 160px;
 	display: inline-block;
 	overflow: hidden;
 	color: #e53935;
 	cursor: pointer;
 }
 
-.prev_slide{
+.prev_slide .fi{
 	margin-right: 15px;
 }
 
-.next_slide:hover,
-.prev_slide:hover{
+.next_slide .fi:hover,
+.prev_slide .fi:hover{
 	color: #111111;
 }
 
