--- a/beauty-spa.css
+++ b/beauty-spa.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    04/06/2024
+Last change:    04/07/2024
 Author:   creativemaze
 Primary use:    Beauty Spa
 -------------------------------------------------------------------*/
@@ -791,7 +791,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #696969;
 	letter-spacing: 1px;
 	text-align: left;
-	padding: 15px 0 10px;
+	padding-top: 15px;
 	line-height: 1.5em;
 }
 
@@ -807,16 +807,16 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #111111;
 	letter-spacing: 1px;
 	text-align: left;
-	padding: 6px 0;
+	padding: 2px 0;
 }
 
 .info_list > ul > li::before{
 	font-family: 'uicons-thin-straight';
 	content: "\fc0a";
 	font-weight: 100;
-	font-size: 26px;
+	font-size: 32px;
 	position: relative;
-	top: 8px;
+	top: 11px;
 	padding-right: 10px;
 	color: #f64f59;
 }
@@ -1814,17 +1814,23 @@ a.footer-logo img{
 	padding-bottom: 10px;
 }
 
-.footer_grid img{
-	vertical-align: middle;
+.footer_image{
+	overflow: hidden;
+	position: relative;
+}
+
+.footer_image > a > img{
+	transition: ease-in-out 3.25s;
+}
+
+.footer_image > a > img:hover{
+	transform: scale(1.15);
+}
+
+.footer_image img{
 	width: 100%;
-}
-
-.footer_grid > a > img{
-	transition: 0.5s;
-}
-
-.footer_grid > a > img:hover{
-	opacity: 0.6;
+	height: auto;
+	display: block;
 }
 
 .details{
