--- a/interior-design.css
+++ b/interior-design.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    05/06/2024
+Last change:    05/07/2024
 Author:    creativemaze
 Primary use:    Interior Design
 -------------------------------------------------------------------*/
@@ -699,7 +699,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-size: 26px;
 	font-weight: 100;
 	position: relative;
-	top: 10px;
+	top: 8px;
 	padding-right: 12px;
 	color: #d3959b;
 }
@@ -833,9 +833,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .interior_area_three{
 	min-height: 400px;
 	padding: 8em 0;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
+	background-color: #eeeeee;
 }
 
 .interior_group_three{
@@ -980,7 +978,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	max-height: 290px;
 	border-radius: 50%;
 	margin: auto;
-	box-shadow: 0 20px 70px rgba(38,42,76,.2);
 }
 
 .center_image{
@@ -988,7 +985,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	max-height: 290px;
 	margin: auto;
 	border-radius: 50%;
-	box-shadow: 0 20px 70px rgba(38,42,76,.2);
 }
 
 .photo_image img{
@@ -2103,5 +2099,11 @@ a.footer-logo img{
 	.blog_col{
 		padding-left: 0;
 		padding-right: 0;
+	}
+}
+
+@media only screen and (max-width: 320px){
+	.video-play-button{
+		margin-top: 65px;
 	}
 }
