--- a/logistics.css
+++ b/logistics.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    08/06/2024
+Last change:    05/07/2024
 Author:    creativemaze
 Primary use:    Logistics
 -------------------------------------------------------------------*/
@@ -519,8 +519,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 0 25px;
 	position: relative;
 	z-index: 9999;
-	margin: -80px auto 0;
-	margin-bottom: calc(9em + 80px);
+	margin: -80px auto 9em;
 }
 
 .logistics_group_one{
@@ -620,11 +619,197 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 /* --- 3.2. Logistics Area Two --- */
 .logistics_area_two{
 	max-width: 1280px;
+	margin: 0 auto 0;
+	padding: 0 25px;
+	margin-bottom: calc(9em + 80px);
+}
+
+.logistics_group_two{
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.area_head{
+	flex: 58.33%;
+	width: 58.33%;
+	padding: 0 25px;
+}
+
+.area_info{
+	flex: 41.66%;
+	width: 41.66%;
+	padding: 0 25px;
+	margin-top: 40px;
+}
+
+.area_head h5{
+	font-family: 'Raleway' , Arial, sans-serif;
+	font-size: 14px;
+	font-weight: 600;
+	display: block;
+	color: #feb600;
+	letter-spacing: 1px;
+	text-align: left;
+	text-transform: uppercase;
+	line-height: 1.5em;
+}
+
+.area_head h2{
+	max-width: 550px;
+	font-family: 'Raleway' , Arial, sans-serif;
+	font-size: 40px;
+	font-weight: 800;
+	display: block;
+	color: #1a2980;
+	text-align: left;
+	letter-spacing: 1px;
+	line-height: 1.2em;
+}
+
+.area_info p{
+	max-width: 550px;
+	font-family: 'Roboto' , Arial, sans-serif;
+	font-size: 16px;
+	font-weight: normal;
+	padding: 15px 0;
+	display: block;
+	color: #696969;
+	letter-spacing: 1px;
+	text-align: left;
+	line-height: 1.5em;
+}
+
+.feature_area{
+	position: relative;
+	z-index: 99;
+	width: calc(100% - 50px);
+	display: flex;
+	flex-wrap: wrap;
+	min-height: 400px;
+	background-color: #1a2980;
+	padding: 25px 25px 45px 25px;
+	margin: 100px auto 0;
+	border-left: solid 5px #feb600;
+}
+
+.feature_col{
+	flex: 33.33%;
+	width: 33.33%;
+	padding: 0 20px;
+}
+
+.feature_box{
+	text-align: center;
+	max-width: 400px;
+	margin: 0 auto;
+}
+
+.feature_image{
+	position: relative;
+}
+
+.feature_image img{
+	width: 160px;
+	height: 160px;
+	background-color: #ffffff;
+	padding: 10px;
+	display: block;
+	margin: -100px auto 0;
+	border-radius: 50%;
+}
+
+.feature_content h3{
+	font-family: 'Raleway' , Arial, sans-serif;
+	font-size: 20px;
+	font-weight: 600;
+	display: block;
+	color: #ffffff;
+	letter-spacing: 1px;
+	text-align: center;
+	line-height: 1.4em;
+}
+
+.feature_content p{
+	font-family: 'Roboto' , Arial, sans-serif;
+	font-size: 15px;
+	font-weight: normal;
+	display: block;
+	color: #dddddd;
+	letter-spacing: 1px;
+	text-align: left;
+	line-height: 1.5em;
+	padding-top: 15px;
+}
+
+.feature_list > ul > li{
+	font-family: 'Raleway' , Arial, sans-serif;
+	font-size: 14px;
+	font-weight: 600;
+	display: block;
+	color: #ffffff;
+	letter-spacing: 1px;
+	text-align: left;
+}
+
+.feature_list > ul > li::before{
+	font-family: 'uicons-thin-straight';
+	content: "\fc0a";
+	font-weight: 600;
+	font-size: 26px;
+	position: relative;
+	top: 8px;
+	padding-right: 10px;
+	color: #feb600;
+}
+
+.slick-dots {
+	position: relative;
+	z-index: 999999;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+	justify-content: center;
+	margin: 0;
+	padding: 1rem 0;
+	list-style-type: none;
+}
+
+.slick-dots button{
+	display: block;
+	width: 1.3rem;
+	height: 1.3rem;
+	padding: 0;		
+	border: solid 1px #ffffff;
+	border-radius: 50%;
+	background-color: transparent;
+	text-indent: -9999px;
+}
+
+li.slick-active button{
+	background-color: #feb600;
+}
+
+.slick-dots button:hover{
+	background-color: #feb600;
+}
+
+.slick-dots li{
+	margin: 22px 4px 0 4px;
+}
+
+.logistics_area_two .slick-list{
+	overflow: visible;
+}
+
+/* --- 3.3. Logistics Area Three --- */
+.logistics_area_three{
+	max-width: 1280px;
 	margin: 0 auto 9em;
 	padding: 0 25px;
 }
 
-.logistics_group_two{
+.logistics_group_three{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
@@ -815,187 +1000,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #111111;
 	background-color: transparent;
 	border-color: #111111;
-}
-
-/* --- 3.3. Logistics Area Three --- */
-.logistics_area_three{
-	max-width: 1280px;
-	margin: 0 auto 9em;
-	padding: 0 25px;
-}
-
-.logistics_group_three{
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.area_head{
-	flex: 58.33%;
-	width: 58.33%;
-	padding: 0 25px;
-}
-
-.area_info{
-	flex: 41.66%;
-	width: 41.66%;
-	padding: 0 25px;
-	margin-top: 40px;
-}
-
-.area_head h5{
-	font-family: 'Raleway' , Arial, sans-serif;
-	font-size: 14px;
-	font-weight: 600;
-	display: block;
-	color: #feb600;
-	letter-spacing: 1px;
-	text-align: left;
-	text-transform: uppercase;
-	line-height: 1.5em;
-}
-
-.area_head h2{
-	max-width: 550px;
-	font-family: 'Raleway' , Arial, sans-serif;
-	font-size: 40px;
-	font-weight: 800;
-	display: block;
-	color: #1a2980;
-	text-align: left;
-	letter-spacing: 1px;
-	line-height: 1.2em;
-}
-
-.area_info p{
-	max-width: 550px;
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 16px;
-	font-weight: normal;
-	padding: 15px 0;
-	display: block;
-	color: #696969;
-	letter-spacing: 1px;
-	text-align: left;
-	line-height: 1.5em;
-}
-
-.feature_area{
-	width: calc(100% - 50px);
-	display: flex;
-	flex-wrap: wrap;
-	min-height: 400px;
-	background-color: #ffffff;
-	padding: 25px 25px 40px 25px;
-	margin: 85px auto 0;
-	box-shadow: 0 20px 70px rgba(38,42,76,.2);
-	border-left: solid 5px #feb600;
-}
-
-.feature_col{
-	flex: 33.33%;
-	width: 33.33%;
-	padding: 0 20px;
-}
-
-.feature_box{
-	text-align: center;
-	max-width: 400px;
-	margin: 0 auto;
-}
-
-.feature_image{
-	position: relative;
-}
-
-.feature_image img{
-	width: 130px;
-	height: 130px;
-	display: block;
-	margin: -85px auto 0;
-	border-radius: 50%;
-}
-
-.feature_content h3{
-	font-family: 'Raleway' , Arial, sans-serif;
-	font-size: 20px;
-	font-weight: 600;
-	display: block;
-	color: #111111;
-	letter-spacing: 1px;
-	text-align: center;
-	line-height: 1.4em;
-}
-
-.feature_content p{
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 15px;
-	font-weight: normal;
-	display: block;
-	color: #696969;
-	letter-spacing: 1px;
-	text-align: left;
-	line-height: 1.5em;
-}
-
-.feature_list > ul > li{
-	font-family: 'Raleway' , Arial, sans-serif;
-	font-size: 14px;
-	font-weight: 600;
-	display: block;
-	color: #1a2980;
-	letter-spacing: 1px;
-	text-align: left;
-}
-
-.feature_list > ul > li::before{
-	font-family: 'uicons-thin-straight';
-	content: "\fc0a";
-	font-weight: 600;
-	font-size: 26px;
-	position: relative;
-	top: 8px;
-	padding-right: 10px;
-	color: #feb600;
-}
-
-.slick-dots {
-	position: relative;
-	z-index: 999999;
-	left: 50%;
-	transform: translateX(-50%);
-	display: flex;
-	justify-content: center;
-	margin: 0;
-	padding: 1rem 0;
-	list-style-type: none;
-}
-
-.slick-dots button{
-	display: block;
-	width: 1.3rem;
-	height: 1.3rem;
-	padding: 0;		
-	border: solid 1px #6f6f6f;
-	border-radius: 50%;
-	background-color: transparent;
-	text-indent: -9999px;
-}
-
-li.slick-active button{
-	background-color: #feb600;
-}
-
-.slick-dots button:hover{
-	background-color: #feb600;
-}
-
-.slick-dots li{
-	margin: 22px 4px 0 4px;
-}
-
-.logistics_area_three .slick-list{
-	overflow: visible;
 }
 
 /* --- 3.4. Logistics Area Four --- */
@@ -2033,7 +2037,22 @@ a.footer-logo img{
 		width: 50%;
 	}
 	
-	.logistics_area_one{
+	.area_head{
+		flex: 100%;
+		width: 100%;
+	}
+	
+	.area_info{
+		flex: 100%;
+		width: 100%;
+		margin-top: 10px;
+	}
+	
+	.feature_area{
+		margin-top: 75px;
+	}
+	
+	.logistics_area_two{
 		margin-bottom: 9em;
 	}
 	
@@ -2046,17 +2065,6 @@ a.footer-logo img{
 	.square_col_left{
 		flex: 100%;
 		width: 100%;
-	}
-	
-	.area_head{
-		flex: 100%;
-		width: 100%;
-	}
-	
-	.area_info{
-		flex: 100%;
-		width: 100%;
-		margin-top: 10px;
 	}
 	
 	.blog_col{
