--- a/contact.css
+++ b/contact.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    28/08/2024
+Last change:   03/09/2024
 Author:    creativemaze
 Primary use:    Page
 -------------------------------------------------------------------*/
@@ -16,11 +16,8 @@ Primary use:    Page
 	2.1. Logo & Navigation
 	2.2. Header Content
 3. Main Content
-	3.1. Services Area One 
-	3.2. Services Area Two
-	3.3. Services Area Three
-	3.4. Services Area Four
-	3.5. Services Area Five
+	3.1. Contact Area One 
+	3.2. Contact Area Two
 	 
 4. Footer
 5. Responsive
@@ -84,20 +81,6 @@ ul{
 		opacity: 1;
 		transform: scale3d(0.5,0.5,1);
 	}
-}
-
-.bg_head{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 40px;
-	font-weight: 700;
-	display: block;
-	color: #ffffff;
-	line-height: 1.2em;
-	letter-spacing: 1px;
-	text-align: center;
-	max-width: 800px;
-	margin: 0 auto;
-	margin-bottom: 125px;
 }
 
 /* 2. HEADER
@@ -426,673 +409,234 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .header-title__sub{
 	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 18px;
+	font-size: 15px;
 	font-weight: normal;
 	display: block;
 	color: #dddddd;
-	line-height: 1.6em;
+	line-height: 1.5em;
 	letter-spacing: 1px;
 	text-align: center;
+	text-transform: uppercase;
 	padding: 15px 0;
-	max-width: 550px;
-	margin: auto;
 }
 
 /* 3. MAIN CONTENT
  ----------- */
- 
-/* --- 3.1. Services Area One --- */
-.services_area_one{
-	max-width: 1200px;
-	margin: -180px auto 9em;
+/* --- 3.1. Contact Area One --- */
+.contact_area_one{
+	position: relative;
+	z-index: 99;
+	max-width: 1050px;
+	margin: -215px auto 7em;
 	padding: 0 25px;
-	position: relative;
-	z-index: 999;
 }
 
-.services_group_one{
+.contact_group_one{
 	width: 100%;
-	display: flex;
+	display: flex; 
 	flex-wrap: wrap;
-}
-
-.feature_col{
-	flex: 25%;
-	width: 25%;
-	padding: 0 20px 0;
-}
-
-.feature_box{
-	max-width: 320px;
-	margin: auto;
-}
-
-.mid_info{
-	min-height: 25px;
-	overflow: hidden;
-	padding-bottom: 25px;
-	width: 100%;
-	position: relative;
-	border-radius: 5px;
 	background-color: #ffffff;
-	box-shadow: 0 20px 70px rgba(38,42,76,.2);
 }
 
-.mid_info h3{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 14px;
-	font-weight: 600;
-	display: block;
-	text-align: center;
-	color: #111111;
-	letter-spacing: 1px;
-	line-height: 1.4em;
-	text-transform: uppercase;
-	padding: 5px 0;
-}
-
-.feature_box p{
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 15px;
-	font-weight: normal;
-	display: block;
-	color: #696969;
-	letter-spacing: 1px;
-	text-align: center;
-	line-height: 1.5em;
-	padding: 25px 0 0;
-}
-
-.list_num{
-	width: 70px;
-	height: 70px;
-	margin: 20px auto 0;
-	background-color: #1488cc;
-	border-radius: 50%;
-}
-
-.list_num h4{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-weight: 600;
-	font-size: 22px;
-	display: block;
-	text-align: center;
-	color: #ffffff;
-	line-height: 1.4em;
-}
-
-.num_center{
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
-
-.cube_crumb{
-	width: 50px;
-	margin: auto;
-	height: 1px;
-	border-bottom: solid 2px #1488cc;
-	margin-top: -8px;
-}
-
-.services_area_one .slick-dots {
-	position: relative;
-	z-index: 999999;
-	left: 50%;
-	transform: translateX(-50%);
-	display: flex;
-	justify-content: center;
-	margin: 0;
-	padding: 1rem 0;
-	list-style-type: none;
-}
-
-.services_area_one .slick-dots button{
-	display: block;
-	width: 1.3rem;
-	height: 1.3rem;
-	padding: 0;		
-	border: solid 1px #6f6f6f;
-	border-radius: 50%;
-	background-color: transparent;
-	text-indent: -9999px;
-}
-
-.services_area_one li.slick-active button{
-	background-color: #1488cc;
-}
-
-.services_area_one .slick-dots button:hover{
-	background-color: #1488cc;
-}
-
-.services_area_one .slick-dots li{
-	margin: 18px 0.40rem 0;
-}
-
-/* --- 3.2. Services Area Two --- */
-.services_area_two{
-	max-width: 1280px;
-	margin: 0 auto 9em;
+.bg_col{
+	flex: 33.33%;
+	width: 33.33%;
 	padding: 0 25px;
 }
 
-.services_group_two{
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.services_group{
-	max-width: 1400px;
-	margin: 0 auto;
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.info_head{
-	flex: 58.33%;
-	width: 58.33%;
-	padding: 0 10px;
-}
-
-.info_content{
-	flex: 41.66%;
-	width: 41.66%;
-	padding: 0 10px;
-	margin-top: 35px;
-}
-
-.info_head h2{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 40px;
-	font-weight: 700;
-	color: #111111;
-	display: block;
-	text-align: left;
-	letter-spacing: 1px;
-	line-height: 1.2em;
-	max-width: 600px;
-}
-
-.info_content p{
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 16px;
-	font-weight: normal;
-	display: block;
-	color: #696969;
-	letter-spacing: 1px;
-	text-align: left;
-	line-height: 1.5em;
-	max-width: 500px;
-}
-
-.grid_col{
-	flex: 25%;
-	width: 25%;
-	padding: 30px 20px 0;
-}
-
-.grid_box{
-	position: relative;
-	text-align: center;
+.bg_box{
 	max-width: 350px;
+	margin: 0 auto;
+	text-align: center;
+	padding: 30px 0 15px;
+	overflow: auto;
+	min-height: 30px;
 }
 
-.grid_image{
-	overflow: hidden;
-	position: relative;
-}
-
-.grid_image img{
-	width: 100%;
-	height: auto;
+.bg_box .fi{
+	font-size: 44px;
+	color: #1488cc;
 	display: block;
+	text-align: left;
 }
 
-.grid_overlay{
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	height: 100%;
-	width: 100%;
-	background: rgba(24, 25, 34, 0.5);
-}
-
-.grid_icon{
-	position: absolute;
-	top: 20px;
-	left: 20px;
-}
-
-.grid_icon .fi{
-	font-size: 48px;
-	color: #ffffff;
-	display: inline-block;
-	text-align: center;
-}
-
-.grid_content{
-	padding: 25px 20px;
-	text-align: center;
-	background-color: #ffffff;
-	box-shadow: 0 20px 70px rgba(38,42,76,.2);
-}
-
-.grid_content h3{
+.bg_box h3{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 18px;
 	font-weight: 600;
 	display: block;
+	text-align: left;
 	color: #111111;
-	text-align: center;
 	letter-spacing: 1px;
 	line-height: 1.4em;
-	margin: 0;
+	margin-top: 0;
+	padding-bottom: 5px;
 }
 
-.grid_content p{
+.bg_box p{
 	font-family: 'Roboto' , Arial, sans-serif;
 	font-size: 15px;
 	font-weight: normal;
 	display: block;
 	color: #696969;
 	letter-spacing: 1px;
-	text-align: center;
-	line-height: 1.5em;
-	padding-top: 10px;
+	text-align: left;
+	line-height: 1em;
 }
 
-.area_button a{
+.bg_box a{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 13px;
+	font-size: 14px;
 	font-weight: 600;
-	letter-spacing: 1px;
-	text-align: center;
-	text-transform: uppercase;
+	text-transform: lowercase;
 	display: inline-block;
 	color: #1488cc;
+	letter-spacing: 1px;
+	text-align: center;
 	text-decoration: none;
-	max-width: 110px;
-	margin: 0 auto;
-	transition: 0.5s;
-	padding-top: 5px;
 }
 
-.area_button a::after{
-	content: "\203A";
-	position: relative;
-	top: 1px;
-	font-size: 20px;
-	display: inline-block;
-	padding-left: 5px;
-}
-
-.area_button a:hover{
+.bg_box a:hover{
 	color: #111111;
 }
 
-/* --- 3.3. Services Area Three --- */
-.services_area_three{
-	position: relative;
-	min-height: 500px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	padding: 5em 0;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-	margin-bottom: 9em;
-}
-
-.services_area_three::before {
-	content: '';
-	position: absolute;
-	z-index: 1;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: rgba(24, 25, 34, 0.6);
-}
-
-.services_group_three{
-	position: relative;
-	z-index: 999;
-	max-width: 1100px;
-	margin: 0 auto;
-	padding: 0 10px;
-}
-
-.video-play-button {
-	position: absolute;
-	z-index: 0;
-	left: 50%;
-	top: 50%;
-	z-index: 999;
-	transform: translateX(-50%) translateY(-50%);
-	box-sizing: content-box;
-	display: block;
-	width: 28px;
-	height: 42px;
-	border-radius: 50%;
-	padding: 28px 16px 12px 32px;
-	margin-top: 50px;
-}
-
-.video-play-button:before {
-	content: "";
-	position: absolute;
-	z-index: 0;
-	left: 50%;
-	top: 50%;
-	transform: translateX(-50%) translateY(-50%);
-	display: block;
-	width: 80px;
-	height: 80px;
-	background: transparent;
-	border: solid 2px #ffffff;
-	border-radius: 50%;
-	animation: pulse-border 1500ms ease-out infinite;
-}
-
-.video-play-button:after {
-	content: "";
-	position: absolute;
-	z-index: 1;
-	left: 50%;
-	top: 50%;
-	transform: translateX(-50%) translateY(-50%);
-	display: block;
-	width: 80px;
-	height: 80px;
-	background: transparent;
-	border: solid 2px #ffffff;
-	border-radius: 50%;
-	transition: all 200ms;
-}
-
-.video-play-button span {
-	display: block;
-	position: relative;
-	z-index: 3;
-	width: 0;
-	height: 0;
-	border-left: 18px solid #ffffff;
-	border-top: 12px solid transparent;
-	border-bottom: 12px solid transparent;
-}
-
-@keyframes pulse-border {
-  0% {
-    transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
-    opacity: 1;
-  }
-  100% {
-    transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1.5);
-    opacity: 0;
-  }
-}
-
-/* --- 3.4. Services Area Four --- */
-.services_area_four{
-	max-width: 1280px;
-	margin: 0 auto 0;
+/* --- 3.2. Contact Area Two --- */
+.contact_area_two{
+	max-width: 1200px;
+	margin: 0 auto -14em;
 	padding: 0 25px;
-	margin-bottom: calc(9em + 50px);
+	position: relative;
+	z-index: 999;
 }
 
-.services_group_four{
+.contact_group_two{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
+	padding: 10px;
+	background-color: #ffffff;
+	box-shadow: 0 20px 70px rgba(38,42,76,.2);
+	min-height: 500px;
 }
 
-.square_col_left{
+.area_col{
 	flex: 50%;
 	width: 50%;
-	padding: 0 20px;
 }
 
-.square_col_right{
+.form_col{
 	flex: 50%;
 	width: 50%;
-	padding: 0 20px;
+	min-height: 500px;
 }
 
-.square_area{
+.form_area{
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-start;
 	align-items: center;
 }
 
-.square_box{
+.area_box{
 	max-width: 600px;
-	padding-left: 20px;
-}
-
-.square_box h2{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 40px;
-	font-weight: 700;
-	color: #111111;
-	display: block;
-	text-align: left;
-	letter-spacing: 1px;
-	line-height: 1.2em;
-}
-
-.square_box p{
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 16px;
-	font-weight: normal;
-	padding-top: 15px;
-	display: block;
-	color: #696969;
-	letter-spacing: 1px;
-	text-align: left;
-	line-height: 1.5em;
-	max-width: 450px;
-}
-
-.square_info_area{
-	padding-top: 4px;
-	min-height: 25px;
-	max-width: 300px;
-}
-
-.square_info_box{
-	width: 100%;
-}
-
-.accordion {
-	cursor: pointer;
-	padding: 8px 6px;
-	width: 100%;
-	text-align: left;
-	overflow: hidden;
-	transition: 0.4s;
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 16px;
-	font-weight: 600;
-	display: block;
-	color: #111111;
-	letter-spacing: 1px;
-	border-bottom: double 5px #1488cc;
-	line-height: 1.4em;
-}
-
-.accordion:after {
-	content: '\002B';
-	font-size: 16px;
-	color: #111111;
-	font-weight: 600;
-	float: right;
-}
-
-.active-bar:after {
-	content: "\2212";
-}
-
-.panel{
-	padding: 0;
-	background-color: #ffffff;
-	max-height: 0;
-	overflow: hidden;
-	transition: max-height 0.2s ease-out;
-}
-
-.panel > p{
-	padding: 12px 8px 12px;
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 15px;
-	font-weight: normal;
-	display: block;
-	line-height: 1.5em;
-	color: #696969;
-}
-
-.photo_area{
-	max-width: 500px;
+	margin: 0 auto;
+	position: relative;
 	text-align: center;
-	position: relative;
+	height: 500px;
 }
 
-.photo_image{
-	position: relative;
-	z-index: 1;
-}
-
-.photo_image img{
-	width: 100%;
-	height: auto;
-	display: block;
-	border-bottom-right-radius: 25%;
-	border-top-left-radius: 25%;
-}
-
-.box_content{
-	position: absolute;
-	bottom: -75px;
-	left: 25px;
-	z-index: 99;
-	width: 200px;
-	height: 200px;
-	background-color: #ffffff;
-	border-radius: 50%;
-}
-
-.box_info{
-	width: 180px;
-	height: 180px;
-	margin: 10px auto;
-	background-color: #1488cc;
-	border-radius: 50%;
-}
-
-.box_feature{
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	padding: 15px;
-}
-
-.box_title{
-	width: 100%;
+.area_box iframe{
 	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	min-height: auto;
-	border: double 4px #ffffff;
-	border-radius: 50%;
-}
-
-.box_title h3{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 14px;
-	font-weight: 700;
-	display: block;
-	color: #ffffff;
-	text-align: center;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	line-height: 1.5em;
-	padding: 9px 0;
-	margin: 0;
-}
-
-/* --- 3.5. Services Area Four --- */
-.services_area_five{
-	max-width: 1200px;
-	width: calc(100% - 50px);
-	margin: 0 auto -6em;
-	position: relative;
-	z-index: 999;
-	box-shadow: 0 20px 70px rgba(38,42,76,.2);
-	background-color: #ffffff;
-	border-radius: 10px;
-}
-
-.services_group_five{
 	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	padding: 40px 30px;
+	border: none;
 }
 
-.title_head{
-	flex: 83.33%;
-	width: 83.33%;
+.form_box{
+	width: 100%;
+	padding: 20px 25px;
 }
 
-.title_head h3{
-	max-width: 650px;
-	color: #111111;
+.form_box h3{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 30px;
 	font-weight: 700;
 	display: block;
-	text-align: left;
+	color: #111111;
+	text-align: center;
 	letter-spacing: 1px;
 	line-height: 1.2em;
+	margin-top: 0;
+	padding-bottom: 10px;
 }
 
-.right_btn{
-	flex: 16.66%;
-	width: 16.66%;
-	margin-top: 30px;
+.form-row {
+	flex-direction: row;
+	display: flex;
 }
 
-.right_btn a{
-	background-color: #1488cc;
-	width: 150px;
-    color: #ffffff;
-    padding: 13px 14px;
-    text-decoration: none;
-	text-transform: uppercase;
-    display: block;
-    font-size: 13px;
-	font-weight: 600;
-	font-family: 'Montserrat', Arial, sans-serif;
-    transition: 0.5s;
-	border: 1px solid #1488cc;
+.form_box input[type="text"],
+.form_box input[type="email"]{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 13px;
+	font-weight: 500;
+	padding: 7px 5px;
+	height: 40px;
+	border: none;
+	margin: 10px 0;
+	flex-grow: 1;
 	letter-spacing: 1px;
-	text-align: center;
+	border-bottom: solid 1px #6f6f6f;
 }
 
-.right_btn a:hover{
-	color: #111111;
+#right-space{
+	margin-right: 10px;
+}
+
+#left-space{
+	margin-left: 10px;
+}
+
+.form_box textarea{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 13px;
+	font-weight: 500;
+	padding: 7px 5px;
+	border: none;
+	width: auto;
+	min-height: 175px;
+	margin: 10px 0;
+	flex-grow: 1;
+	letter-spacing: 1px;
+	border-bottom: solid 1px #6f6f6f;
+}
+
+.form_box input[type="email"]::placeholder,
+.form_box input[type="text"]::placeholder,
+.form_box textarea::placeholder{
+	color: #333333;
+	opacity: 1;
+}
+	
+.form_box input[type="submit"]{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 14px;
+	font-weight: 600;
+	text-transform: uppercase;
+	margin: 10px 0;
+	width: 160px;
+	height: 40px;
+	text-align: center;
+	color: #ffffff;
+	letter-spacing: 1px;
+	background-color: #1488cc;
+	border: solid 1px #1488cc;
+	border-radius: 5px;
+	transition: 0.5s;
+}
+
+.form_box input[type="submit"]:hover{
 	background-color: #ffffff;
+	color: #111111;
 	border-color: #111111;
 }
 
@@ -1113,7 +657,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 0 25px;
 	display: flex;
 	flex-wrap: wrap;
-	padding-top: 6em;
+	padding-top: 14em;
 }
 
 .footer_col{
@@ -1282,12 +826,6 @@ a.footer-logo img{
 
 /* 5. RESPONSIVE
  ----------- */
-@media only screen and (max-width: 1024px){
-	.services_area_four{
-		margin-bottom: 9em;
-	}
-} 
- 
 @media only screen and (max-width: 992px){
 	nav.navbar.bootsnav .navbar-toggle{
         background: transparent;
@@ -1381,42 +919,25 @@ a.footer-logo img{
 		padding-top: 21px;
 	}
 	
-	.grid_col{
+	.bg_col{
 		flex: 50%;
 		width: 50%;
 	}
 	
-	.info_head{
+	.area_col{
 		flex: 100%;
 		width: 100%;
 	}
 	
-	.info_content{
+	.form_col{
 		flex: 100%;
 		width: 100%;
-		margin-top: 15px;
+		margin-top: 40px;
 	}
 	
-	.square_col_left{
-		flex: 100%;
-		width: 100%;
-	}
-	
-	.square_col_right{
-		flex: 100%;
-		width: 100%;
-		margin-top: 60px;
-	}
-	
-	.title_head{
-		flex: 100%;
-		width: 100%;
-	}
-	
-	.right_btn{
-		flex: 100%;
-		width: 100%;
-		margin-top: 20px;
+	.contact_group_two{
+		max-width: 600px;
+		margin: 0 auto;
 	}
 	
 	.footer_col{
@@ -1430,29 +951,21 @@ a.footer-logo img{
 		font-size: 30px;
 	}
 	
-	.square_box h2,
-	.info_head h2,
-	.bg_head{
-		font-size: 30px;
-	}
-	
-	.title_head h3{
-		font-size: 25px;
-	}
-
-	.square_col_left,
-	.square_col_right,
-	.square_box,
-	.info_head,
-	.info_content,
-	.grid_col{
-		padding-left: 0;
-		padding-right: 0;
-	}
-	
-	.grid_col{
+	.bg_col{
 		flex: 100%;
 		width: 100%;
+	}
+	
+	.form-row {
+		flex-direction: column;
+	}
+	
+	#right-space{
+		margin-right: 0;
+	}
+	
+	#left-space{
+		margin-left: 0;
 	}
 	
 	.footer_col{
@@ -1463,28 +976,8 @@ a.footer-logo img{
 }
 
 @media only screen and (max-width: 420px){
-	.box_content{
-		width: 160px;
-		height: 160px;
-	}
-	
-	.box_info{
-		width: 140px;
-		height: 140px;
-	}
-	
-	.box_feature{
-		padding: 12px;
-	}
-	
-	.box_title h3{
-		font-size: 12px;
-		padding: 6px 0;
-	}
-}
-
-@media only screen and (max-width: 320px){
-	.video-play-button{
-		margin-top: 65px;
+	.form_box{
+		padding-left: 0;
+		padding-right: 0;
 	}
 }
